<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/label_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:textSize="32sp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:gravity="center" android:textStyle="bold"/>
    <TextView
            style="@style/form_label"
            android:text="@string/label_weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/textView"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText"
            app:layout_constraintStart_toStartOf="@+id/textView2" app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintHorizontal_bias="0.0"
            android:hint="Ex: 78,6 kg"/>
    <TextView
            style="@style/form_label"
            android:text="@string/label_height"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" app:layout_constraintStart_toStartOf="@+id/editText"
            app:layout_constraintEnd_toEndOf="@+id/editText" app:layout_constraintTop_toBottomOf="@+id/editText"
            android:layout_marginTop="24dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText2"
            app:layout_constraintStart_toStartOf="@+id/textView3" app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:hint="Ex: 1,80 m"/>
    <TextView
            style="@style/form_label"
            android:text="@string/label_sex"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" app:layout_constraintStart_toStartOf="@+id/editText2"
            app:layout_constraintEnd_toEndOf="@+id/editText2" app:layout_constraintTop_toBottomOf="@+id/editText2"
            android:layout_marginTop="24dp"/>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:id="@+id/spinner" app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="@+id/textView4" app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/button_calculate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button" app:layout_constraintStart_toStartOf="@+id/spinner"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/spinner" app:layout_constraintEnd_toEndOf="@+id/spinner"
            app:layout_constraintHorizontal_bias="0.498"/>
    <Button
            android:text="@string/button_clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button2" app:layout_constraintEnd_toEndOf="@+id/spinner"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/button"
            app:layout_constraintStart_toStartOf="@+id/spinner" app:layout_constraintHorizontal_bias="0.498"/>
</androidx.constraintlayout.widget.ConstraintLayout>